--- a/components/go-zzpwuthz/overlays/development/deployment-patch.yaml
+++ b/components/go-zzpwuthz/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-zzpwuthz
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/go-zzpwuthz:f2a6c83b5e23118d40757fdb7f3b07eef1eb1919@sha256:dcac92ac3aba5b3cfd8c30a99a2382bf98c17abcfe24e0ab80c1c69fbea8b37c
+          name: container-image
